--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>DashBoard</h1>
+    <p>lorem ipsum dolor sit amet, consectetur adip</p>
     <script src="js/main.js"></script>
   </body>
 </html>
